<resources>
    <string name="app_name">AuthenticationForm</string>
    <string name="password_requirement_characters">At least 8 characters</string>
    <string name="password_requirement_capital">At least 1 upper-case letter</string>
    <string name="password_requirement_digit">At least 1 digit</string>
    <string name="title_sign_in">Sign In to your account</string>
    <string name="title_sign_up">Sign Up for an account</string>
    <string name="label_email">Email Address</string>
    <string name="label_password">Password</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="action_need_account">Need an account?</string>
    <string name="action_already_have_account">Already have an account?</string>
    <string name="error_title">Uh Oh!</string>
    <string name="ok">Ok</string>

    <string name="cd_show_password">Show password</string>
    <string name="cd_hide_password">Hide password</string>
    <string name="cd_password_requirement_satisfied">%s, satisfied</string>
    <string name="cd_password_requirement_needed">%s, needed</string>
</resources>